Made the about us text align left and fixed css for .dog image

--- a/frontend/src/styles/AboutUs.css
+++ b/frontend/src/styles/AboutUs.css
@@ -27,7 +27,7 @@
   background: linear-gradient(90deg, #e8e4f3 0%, #d4c9e8 100%);
   color: #2d1b4e;
   padding-bottom: 5rem;
-  text-align: center;
+  text-align: left;
 }
 
 a {
@@ -44,6 +44,6 @@ ul {
 }
 
 .dog {
-  width: 500px;
-  align-self: center;
+width: clamp(2rem, 90vw, 750px);
+align-self: center;
 }
